반응형웹 연습 Updated

--- a/responsive/index.html
+++ b/responsive/index.html
@@ -9,6 +9,12 @@
     <!-- style -->
     <link rel="stylesheet" href="/assets/css/reset.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
 
     <!-- HTML5Shiv -->
     <!-- IE 9 미만의 브라우저에서 작동되게 만들어준다. -->
@@ -30,17 +36,115 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header id="header">
       <div class="container">
-        <div class="quick">
-          <a href="">Designer Cafe</a>
-          <a href="">Publisher Cafe</a>
+        <div class="row">
+          <div class="quick">
+            <a href="">Designer Cafe</a>
+            <a href="">Publisher Cafe</a>
+          </div>
+          <!-- //quick -->
+          <div class="title">
+            <p>Professional Web Publisher</p>
+            <h1>
+              <a href="http://webstoryboy.co.kr" target="_blank"
+                >webstoryboy.co.kr</a
+              >
+            </h1>
+          </div>
+          <!-- title -->
+          <div class="icon-font">
+            <ul>
+              <li>
+                <a href="#">
+                  <i class="far fa-envelope"></i>
+                  <span class="tool">Web</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fab fa-codepen"></i>
+                  <span class="tool">codepen</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fab fa-css3"></i>
+                  <span class="tool">CSS3</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fab fa-instagram"></i>
+                  <span class="tool">instagram</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <!-- //quick -->
+        <!-- //row -->
       </div>
       <!-- //container -->
     </header>
+
+    <nav id="nav">
+      <div class="container">
+        <!-- 반응형시 글자가 화면에 붙지않게 여백을 표시해준다. -->
+        <div class="row">
+          <div class="nav">
+            <h2>HTML/CSS Reference</h2>
+            <ul class="clearfix">
+              <li><a href="#">HTML Reference1</a></li>
+              <li><a href="#">HTML Reference2</a></li>
+              <li><a href="#">HTML Reference3</a></li>
+              <li><a href="#">HTML Reference4</a></li>
+              <li><a href="#">HTML Reference5</a></li>
+              <li><a href="#">HTML Reference6</a></li>
+              <li><a href="#">HTML Reference7</a></li>
+              <li><a href="#">HTML Reference8</a></li>
+              <li><a href="#">HTML Reference9</a></li>
+              <li><a href="#">HTML Reference10</a></li>
+              <li><a href="#">HTML Reference11</a></li>
+              <li><a href="#">HTML Reference12</a></li>
+              <li><a href="#">HTML Reference13</a></li>
+              <li><a href="#">HTML Reference14</a></li>
+              <li><a href="#">HTML Reference15</a></li>
+              <li><a href="#">HTML Reference16</a></li>
+              <li><a href="#">HTML Reference17</a></li>
+              <li><a href="#">HTML Reference18</a></li>
+              <li><a href="#">HTML Reference19</a></li>
+              <li><a href="#">HTML Reference20</a></li>
+              <li><a href="#">HTML Reference21</a></li>
+              <li><a href="#">HTML Reference22</a></li>
+              <li><a href="#">HTML Reference23</a></li>
+              <li><a href="#">HTML Reference24</a></li>
+              <li><a href="#">HTML Reference25</a></li>
+              <li><a href="#">HTML Reference26</a></li>
+              <li><a href="#">HTML Reference27</a></li>
+              <li><a href="#">HTML Reference28</a></li>
+              <li><a href="#">HTML Reference29</a></li>
+              <li><a href="#">HTML Reference30</a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- //row -->
+      </div>
+    </nav>
+
+    <article class="article-title">
+      <div class="container">
+        <h2>&ldquo;반응형 사이트 서브 타이틀&rdquo;</h2>
+        <span class="btn">
+          <a href="#"><i class="fas fa-list"></i></a>
+        </span>
+      </div>
+    </article>
   </body>
 </html>
