--- a/responsive/index.html
+++ b/responsive/index.html
@@ -93,7 +93,7 @@
       </div>
       <!-- //container -->
     </header>
-
+    
     <nav id="nav">
       <div class="container">
         <!-- 반응형시 글자가 화면에 붙지않게 여백을 표시해준다. -->
@@ -138,13 +138,104 @@
       </div>
     </nav>
 
-    <article class="article-title">
+    <article id="article-title">
       <div class="container">
-        <h2>&ldquo;반응형 사이트 서브 타이틀&rdquo;</h2>
-        <span class="btn">
-          <a href="#"><i class="fas fa-list"></i></a>
-        </span>
+        <div class="article-title">
+          <h2>&ldquo;반응형 사이트 서브 타이틀&rdquo;</h2>
+          <span class="btn">
+            <a href="#"><i class="fas fa-list"></i></a>
+          </span>
+        </div>
       </div>
     </article>
+
+    <!-- 화면이 줄어들면 center만 줄어들게 된다. -->
+    <!-- 화면이 점점 줄어들면서 cont-right이 아래로 내려간다. absolute를 풀어준다. -->
+    <!-- 화면이 아주 작아지면 float:left를 풀어준다. -->
+    <section id="contents">
+      <h2 class="ir">반응형 사이트 컨텐츠</h2>
+      <div class="container">
+        <section id="cont-left">
+          <h3 class="ir">반응형 사이트 왼쪽 컨텐츠</h3>
+          <article class="cbox column1">
+            <h4 class="cbox-title">Title</h4>
+            <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육을 위한 사이트</p>
+            <!-- menu -->
+            <div class="menu">
+              <ul>
+                <li><a href="#">Cafe<i class="fas fa-angle-double-right"></i></a></li>
+                <li><a href="#">Standard<i class="fas fa-angle-double-right"></i></a></li>
+                <li><a href="#">Tutorial<i class="fas fa-angle-double-right"></i></a></li>
+                <li><a href="#">Reference<i class="fas fa-angle-double-right"></i></a></li>
+                <li><a href="#">CSS<i class="fas fa-angle-double-right"></i></a></li>
+                <li><a href="#">HTML5<i class="fas fa-angle-double-right"></i></a></li>
+              </ul>
+            </div>
+            <!-- //menu -->
+          </article>
+          <!-- //column1 -->
+          <article class="cbox column2">
+            <h4 class="cbox-title">Title</h4>
+            <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육을 위한 사이트</p>
+          </article>
+          <!-- //column2 -->
+          <article class="cbox column3">
+            <h4 class="cbox-title">Title</h4>
+            <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육을 위한 사이트</p>
+          </article>
+          <!-- //column3 -->
+        </section> 
+        <!-- //cont-left -->
+        <section id="cont-center">
+          <h3 class="ir">반응형 사이트 가운데 컨텐츠</h3>
+          <article class="cbox column4">
+            <h4 class="cbox-title">Title</h4>
+            <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육을 위한 사이트</p>
+          </article>
+          <!-- //column4 -->
+          <article class="cbox column5">
+            <h4 class="cbox-title">Title</h4>
+            <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육을 위한 사이트</p>
+          </article>
+          <!-- //column5 -->
+          <article class="cbox column6">
+            <h4 class="cbox-title">Title</h4>
+            <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육을 위한 사이트</p>
+          </article>
+          <!-- //column6 -->
+        </section>
+        <!-- //cont-center -->
+        <section id="cont-right">
+          <h3 class="ir">반응형 사이트 오른쪽 컨텐츠</h3>
+          <article class="cbox column7">
+            <h4 class="cbox-title">Title</h4>
+            <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육을 위한 사이트</p>
+          </article>
+          <!-- //column7 -->
+          <article class="cbox column8">
+            <h4 class="cbox-title">Title</h4>
+            <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육을 위한 사이트</p>
+          </article>
+          <!-- //column8 -->
+          <article class="cbox column9">
+            <h4 class="cbox-title">Title</h4>
+            <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육을 위한 사이트</p>
+          </article>
+          <!-- //column9 -->
+        </section>
+        <!-- //cont-right -->
+      </div>
+    </section>
+    <!-- //contents -->
+
+    <footer id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer">
+            footer
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
