--- a/responsive/index.html
+++ b/responsive/index.html
@@ -175,13 +175,66 @@
           </article>
           <!-- //column1 -->
           <article class="cbox column2">
-            <h4 class="cbox-title">Title</h4>
+            <h4 class="cbox-title">Notice</h4>
             <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육을 위한 사이트</p>
+            <!-- notice -->
+            <div class="notice">
+              <h5>Graphic Design</h5>
+                <ul> 
+                  <li><a href="#">웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.</a></li>
+                  <li><a href="#">웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.</a></li>
+                  <li><a href="#">웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.</a></li>
+                  <li><a href="#">웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.</a></li>
+                </ul>
+                <span class="more"><a href="#">more<i class="fas fa-arrow-circle-right"></i></a></span>
+            </div>
+            <!-- //notice -->
+
+            <!-- notice -->
+            <div class="notice mt15">
+              <h5>Graphic Design</h5>
+                <ul> 
+                  <li><a href="#">웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.</a></li>
+                  <li><a href="#">웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.</a></li>
+                  <li><a href="#">웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.</a></li>
+                  <li><a href="#">웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹 과 관련된 정보 공유 및 교육을 위한 사이트입니다.</a></li>
+                </ul>
+                <span class="more"><a href="#">more<i class="fas fa-arrow-circle-right"></i></a></span>
+            </div>
+            <!-- //notice -->
           </article>
           <!-- //column2 -->
           <article class="cbox column3">
-            <h4 class="cbox-title">Title</h4>
+            <h4 class="cbox-title">Blog</h4>
             <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육을 위한 사이트</p>
+            <!-- blog -->
+            <div class="blog">
+              <h5>Figure</h5>
+              <figure>
+                <a href="#" class="blog-img">
+                  <img src="assets/img/fullimage1.jpg" alt="blog images">
+                  <em>Blog</em>
+                </a>
+                <figcaption>
+                  웹과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹과 관련된 정보 공유 및 교육을 위한 사이트입니다.
+                </figcaption>
+              </figure>
+            </div>
+            <!-- //blog -->
+            <!-- blog2 -->
+            <div class="blog2 mt15">
+              <h5>Figure</h5>
+              <figure>
+                <a href="#" class="blog-img">
+                  <img src="assets/img/fullimage2.jpg" alt="blog images">
+                  <em>Blog</em>
+                </a>
+                <figcaption>
+                  웹과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹과 관련된 정보 공유 및 교육을 위한 사이트입니다.웹과 관련된 정보 공유 및 교육을 위한 사이트입니다.
+                </figcaption>
+              </figure>
+            </div>
+            <!-- //blog2 -->
           </article>
           <!-- //column3 -->
         </section> 
