--- a/Javascript/React/Udemy/keeper-app/my-app/public/index.html
+++ b/Javascript/React/Udemy/keeper-app/my-app/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>Kepper App</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
